k8s/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: core-service
spec:
  type: NodePort
  selector:
    app: core-service
  ports:
    - port: 80
      targetPort: 8080
      nodePort: 30080
