k8s/core-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: core-service
spec:
  type: ClusterIP
  selector:
    app: core-service
  ports:
    - port: 8080
      targetPort: 8080
      nodePort: 30080
